Updated the full screen logic, downloading as pdf, sidebar issue

--- a/virtual_teacher_project/package.json
+++ b/virtual_teacher_project/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "tailwindcss": "^4.1.12"
+  },
+  "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.541.0"
   }
 }
