--- a/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
+++ b/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "framer-motion": "^10.16.4",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
@@ -31,5 +34,3 @@
     ]
   }
 }
-
-
