--- a/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
+++ b/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "framer-motion": "^10.16.4",
     "jspdf": "^3.0.1",
+    "konva": "^9.3.22",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.12",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
