--- a/microservices/user-service-django/requirements.txt
+++ b/microservices/user-service-django/requirements.txt
@@ -12,6 +12,9 @@ python-decouple==3.8
 djangorestframework-simplejwt==5.3.0
 django-allauth==0.57.0
 argon2-cffi==21.3.0
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
 
 # Database - MongoDB
 pymongo==4.6.0
