--- a/virtual_teacher_project/UI/landing_page/landing_page/package.json
+++ b/virtual_teacher_project/UI/landing_page/landing_page/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@react-oauth/google": "^0.12.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
