--- a/virtual_teacher_project/.gitignore
+++ b/virtual_teacher_project/.gitignore
@@ -18,6 +18,7 @@ frontend/tailwind/
 .env.development.local
 .env.test.local
 .env.production.local
+D:\GnyanSetu\virtual_teacher_project\UI\landing_page\landing_page\.env
 
 # IDE and Editor files
 .vscode/
