--- a/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
+++ b/virtual_teacher_project/UI/Dashboard/Dashboard/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^10.16.4",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
@@ -11,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.12",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.9.4",
+    "react-scripts": "^5.0.1",
+    "use-image": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
